--- a/BASHCUP/app/static/app/css/style.css
+++ b/BASHCUP/app/static/app/css/style.css
@@ -112,7 +112,9 @@ background-color: var(--color-muted);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
- 
+  .card .card-body.text-center {
+    background: var(--color-muted);
+}
 .categories .btn:hover{
     background-color: var(--color-dark);
 }
