--- a/BASHCUP/app/templates/app/handicraft.html
+++ b/BASHCUP/app/templates/app/handicraft.html
@@ -27,19 +27,20 @@ class="home text-light text-center d-flex flex-column justify-content-center ali
         <h3 class="text-center">Handi Product</h3>
         <p class="text-center text-muted">Explore the most beautyfull product</p>
         <div class="row g-4">
-       
+          {% for product in handicraftProduct%}
           <div class="col-md-4">
             <div class="card">
               <img src="{{product.image.url}}" class="card-img-top" alt="{{product.title}}">
               <div class="card-body text-center">
                 <h5>{{product.title}}</h5>
+                <p>{{product.description}}</p>
                 <h6>Price: Rs.{{product.price}} </h2>
                 <button class="btn btn-outline-dark">Pay Now</button>
               </div>
             </div>
           </div>
           
-     
+          {%endfor%}
         </div>
       </section>
       {% endblock displayproduct %}
