--- a/BASHCUP/app/templates/app/home.html
+++ b/BASHCUP/app/templates/app/home.html
@@ -27,7 +27,7 @@
 </section>
 
 <div class="handicratf-title">
-    <h1>Handi Craft</h1>
+    <h1>Mitho Samjhana</h1>
 </div>
 
 <!-- handicraft section -->
