--- a/BASHCUP/app/static/app/css/style.css
+++ b/BASHCUP/app/static/app/css/style.css
@@ -3,6 +3,7 @@
     --color-primary: #68736A;
     --color-dark: #010D00;
     --color-muted: #9ba698d4;
+    --color-back: #9ba69872;
    --color-secondary: #511305;
     --color-light: #d8d8d8c8;
 }
@@ -21,7 +22,9 @@ nav{
     background-color: var(--color-primary);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
-
+.nav-button{
+    padding-left: 15px;
+}
 
 .title{
     color: var(--color-secondary);
@@ -113,7 +116,7 @@ background-color: var(--color-muted);
   }
 
   .card .card-body.text-center {
-    background: var(--color-muted);
+    background: var(--color-back);
 }
 .categories .btn:hover{
     background-color: var(--color-dark);
