--- a/BASHCUP/app/static/app/css/handi.css
+++ b/BASHCUP/app/static/app/css/handi.css
@@ -3,6 +3,6 @@
 
 .mainsection{
   
-    background-image: url('/static/app/image/1.png');
+    background-image: url('/static/app/image/10.jpg');
  
 }
